@@ -3,6 +3,7 @@
     * add FileObjResponse class
     * add BaseResponse class
     * unicode support in url path
+    * call file_callback only for files entries (with filename)
 
 ==== 2.4.0 ====
     * new render_negotiation function
